# terminalColors

./: .gitignore  README-BR.md  README.md  pyproject.toml
terminal_colors/: __init__.py  terminal_colors.py
terminal_colors.egg-info/: PKG-INFO  SOURCES.txt
