[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal_colors"
version = "0.0.0"
description = "Utilitário para cores no terminal"
authors = [
    { name = "Gustavo Araújo", email = "guschbus008@gmail.com" }
]
license = { text = "MIT" }
dependencies = []
